2007-10-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/browser.rb: Invoke yelp directly if libgnome2-ruby is
    not present but yelp is available.

2007-10-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Now saves the "scan clipboard" option in
    the config file. Adds ctrl + shift + S as keyboard shortcut. Reported
    by Dmitry Rutsky (Debian bug #442336).

2007-10-25 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/source_base.rb: Yet another problem with cache fixed.

2007-10-25 Mathieu Blondel <mblondel@svn.gnome.org>

    * data/fantasdic/config/default.yaml: Change window's size in initial
    config file. Add es.dict.org and nihongobenkyo.org to dictionaries.

2007-10-25 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/source_base.rb: Now uses mkdir_p to make
    ~/.fantasdic/sources/.

2007-10-25 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: Add shortcuts for "Print" and "Print
    Preview"...

2007-10-24 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/command_line.rb: Now uses gettext's function for plural
    forms. Reported by Djihed Afifi (#489593).
    * lib/fantasdic/ui/main_app.rb: Ditto.

2007-10-24 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/preferences_dialog.rb:
    * lib/fantasdic/ui/main_app.rb:
    * data/fantasdic/glade/preferences_dialog.glade: HTTP proxy preferences.
    This is useful for plugins like "google translate".

2007-10-24 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/add_dictionary_dialog.rb: First click on "cancel" now
    kills the "search available databases" thread if it's still running. In
    that case, a second click is needed to close the window.

2007-10-22 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/edict_file.rb: Fixed typo.

2007-10-21 Mathieu Blondel <mblondel@svn.gnome.org>
